added a paragraph and a button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <p></p>
+        <button></button>
         <script type="text/javascript" src="array-lista/script.js"></script>
     </body>
 </html>
