applied a text to the button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <p></p>
-        <button></button>
+        <button>Cerca</button>
         <script type="text/javascript" src="array-lista/script.js"></script>
     </body>
 </html>
