changed path in script tag  src

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <body>
         <p></p>
         <button>Cerca</button>
-        <script type="text/javascript" src="array-tail/script.js"></script>
+        <script type="text/javascript" src="js/array-tail.js"></script>
     </body>
 </html>
