--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <body>
         <p></p>
         <button>Cerca</button>
+
+        <input type="number" placeholder="Quanti numeri vuoi?">
+        <button id="number">Cerca</button>
+
         <script type="text/javascript" src="js/array-tail.js"></script>
     </body>
 </html>
